--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,104 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  --white: #FFFEF9;
+  --purple: #AE8CA3;
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
+}
+
+#root {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+nav {
+  background-color: var(--purple);
+  position: relative;
+  transition: width ease-in-out 0.2s;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+nav.open {
+  width: 30%;
+}
+
+nav.closed {
+  width: 0;
+}
+
+nav.closed > .nav-content {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+#nav-toggle {
+  height: 3.5rem;
+  width: 3.5rem;
+  position: absolute;
+  right: -3.5rem;
+  margin: 0;
+  padding: 0;
+  background-color: var(--purple);
+  border: 0;
+  border-radius: 0 .5rem .5rem 0;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.nav-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10%;
+}
+
+.nav-content > a {
+  font-size: 1.2rem;
+  color: var(--white);
+  text-decoration: none;
+}
+
+main {
+  background-color: var(--white);
+  width: 100%
+}
+
+@media (orientation: portrait) {
+  #root {
+    flex-direction: column;
   }
-  a:hover {
-    color: #747bff;
+
+  nav {
+    transition: height ease-in-out 0.2s;
   }
-  button {
-    background-color: #f9f9f9;
+
+  nav.open {
+    width: 100%;
+    height: 25%
+  }
+  
+  nav.closed {
+    width: 100%;
+    height: 0%
+  }
+
+  #nav-toggle {
+    right: 0;
+    bottom: -3.5rem;
+    border-radius: 0 0 .5rem .5rem;
+  }
+
+  nav.open {
+    width: 100%;
+  }
+
+  .nav-content {
+    gap: 15%;
   }
 }
