--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 :root {
   --white: #FFFEF9;
   --purple: #AE8CA3;
@@ -7,6 +9,8 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
+  font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: hidden;
 }
 
 #root {
@@ -16,6 +20,10 @@ body {
   overflow-x: hidden;
 }
 
+/* 
+NAVBAR STYLES 
+*/
+
 nav {
   background-color: var(--purple);
   position: relative;
@@ -23,7 +31,8 @@ nav {
 }
 
 nav.open {
-  width: 30%;
+  max-width: 18rem;
+  width: 40%;
 }
 
 nav.closed {
@@ -64,9 +73,42 @@ nav.closed > .nav-content {
   text-decoration: none;
 }
 
+.nav-content > a:hover {
+  text-decoration: underline;
+}
+
+/* 
+MAIN CONTENT STYLES 
+*/
+
 main {
   background-color: var(--white);
-  width: 100%
+  width: 100%;
+  padding: 2rem 8rem;
+  color: #2F3337;
+  overflow: scroll;
+}
+
+main h1 {
+  text-align: center;
+  font-size: 48px;
+}
+
+main > section {
+  margin: 2rem 0;
+}
+
+main h2 {
+  font-size: 32px;
+  margin: .5rem 0;
+}
+
+main p {
+  font-size: 18px;
+}
+
+main a {
+  color: var(--purple);
 }
 
 @media (orientation: portrait) {
@@ -74,13 +116,20 @@ main {
     flex-direction: column;
   }
 
+  /* 
+  NAVBAR STYLES 
+  */
+
   nav {
     transition: height ease-in-out 0.2s;
+    min-width: 0;
+    max-width: none !important;
+    max-height: 18rem;
   }
 
   nav.open {
     width: 100%;
-    height: 25%
+    height: 75%
   }
   
   nav.closed {
@@ -94,11 +143,16 @@ main {
     border-radius: 0 0 .5rem .5rem;
   }
 
-  nav.open {
-    width: 100%;
-  }
-
   .nav-content {
     gap: 15%;
+  }
+
+  /* 
+  MAIN CONTENT STYLES
+  */
+
+  main {
+    padding: 1rem 2rem;
+    width: calc(100% - 4rem);
   }
 }
