--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,12 @@ body {
   height: 100vh;
   margin: 0;
   font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  overflow: hidden;
 }
 
 #root {
   display: flex;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
 }
 
 /* 
@@ -27,7 +25,7 @@ NAVBAR STYLES
 nav {
   background-color: var(--purple);
   position: relative;
-  transition: width ease-in-out 0.2s;
+  transition: max-width ease-in-out 0.2s, width ease-in-out 0.2s;
 }
 
 nav.open {
@@ -36,6 +34,7 @@ nav.open {
 }
 
 nav.closed {
+  max-width: 0;
   width: 0;
 }
 
@@ -71,6 +70,8 @@ nav.closed > .nav-content {
   font-size: 1.2rem;
   color: var(--white);
   text-decoration: none;
+  text-align: center;
+  padding: 0 1rem;
 }
 
 .nav-content > a:hover {
@@ -86,7 +87,7 @@ main {
   width: 100%;
   padding: 2rem 8rem;
   color: #2F3337;
-  overflow: scroll;
+  overflow: auto;
 }
 
 main h1 {
@@ -121,7 +122,7 @@ main a {
   */
 
   nav {
-    transition: height ease-in-out 0.2s;
+    transition: max-height ease-in-out 0.2s, height ease-in-out 0.2s;
     min-width: 0;
     max-width: none !important;
     max-height: 18rem;
@@ -129,12 +130,13 @@ main a {
 
   nav.open {
     width: 100%;
-    height: 75%
+    height: 75%;
   }
   
   nav.closed {
     width: 100%;
-    height: 0%
+    height: 0%;
+    max-height: 0;
   }
 
   #nav-toggle {
