--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,12 @@ main a {
 
 main h1 {
   text-align: center;
-  font-size: 48px;
+  font-size: 3rem;
+}
+
+main > hr {
+  width: 100%;
+  margin: 1.5rem 0;
 }
 
 main > section {
@@ -107,12 +112,15 @@ main > section {
 }
 
 main h2 {
-  font-size: 32px;
-  margin: .75rem 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 1rem 0;
 }
 
 main p {
-  font-size: 18px;
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1.75rem;
   margin: .5rem 0
 }
 
@@ -122,7 +130,7 @@ main.quiz-page {
   align-items: center;
 }
 
-main.quiz-page > h1 {
+main > h1 {
   margin-bottom: .5rem;
 }
 
@@ -130,11 +138,6 @@ main.quiz-page > p.instructions {
   text-align: center;
   font-weight: 300;
   font-size: 1.25rem;
-}
-
-main.quiz-page > hr {
-  width: 100%;
-  margin: 1.5rem;
 }
 
 .question-container {
