--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 :root {
   --white: #FFFEF9;
   --purple: #AE8CA3;
+  --purple-dark: #A27C96;
 }
 
 body {
@@ -85,7 +86,7 @@ MAIN CONTENT STYLES
 main {
   background-color: var(--white);
   width: 100%;
-  padding: 2rem 8rem;
+  padding: 3rem 8rem;
   color: #2F3337;
   overflow-x: hidden;
   overflow-y: auto;
@@ -129,6 +130,20 @@ main ul {
   padding-left: 2rem;
 }
 
+button {
+  cursor: pointer;
+  background-color: var(--purple);
+  border: 0;
+  border-radius: 1rem;
+  padding: .75rem 4rem;
+  font-size: 1.4rem;
+  color: var(--white);
+}
+
+button:hover {
+  background-color: var(--purple-dark);
+}
+
 /* QUIZ PAGE */
 
 main.quiz-page {
@@ -136,13 +151,18 @@ main.quiz-page {
 }
 
 main > h1 {
-  margin-bottom: .5rem;
+  margin: .5rem;
 }
 
 main.quiz-page > p.instructions {
   text-align: center;
   font-weight: 300;
   font-size: 1.25rem;
+}
+
+main.quiz-page > button {
+  width: 75%;
+  margin: 1rem 0;
 }
 
 .question-container {
@@ -201,21 +221,21 @@ main.quiz-page > p.instructions {
   */
 
   nav {
-    transition: max-height ease-in-out 0.2s, height ease-in-out 0.2s;
+    transition: min-height ease-in-out 0.2s, height ease-in-out 0.2s;
     min-width: 0;
     max-width: none !important;
-    max-height: 18rem;
+    min-height: 0;
   }
 
   nav.open {
     width: 100%;
-    height: 75%;
+    min-height: 25vh;
   }
   
   nav.closed {
     width: 100%;
-    height: 0%;
-    max-height: 0;
+    height: 0vh;
+    min-height: 0;
   }
 
   #nav-toggle {
