--- a/src/index.css
+++ b/src/index.css
@@ -213,6 +213,45 @@ main.quiz-page > button {
   border: 2px solid var(--purple); /* Keeps the border purple */
 }
 
+/* RESULTS PAGE */
+
+.card-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  gap: 1.5rem;
+}
+
+.gift-card {
+  width: calc(100%-2rem);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  cursor: pointer
+}
+
+.gift-card > img {
+  height: 10vh;
+}
+
+.gift-card > .card-title {
+  background-color: var(--white);
+  width: 100%;
+  margin-top: 1rem;
+  border-radius: .5rem;
+}
+
+.gift-card > .card-title > p {
+  text-align: center;
+  margin: .5rem;
+  font-weight: 500;
+  font-size: 1.15rem;
+  text-transform: uppercase;
+}
+
 @media (orientation: portrait) {
   #root {
     flex-direction: column;
@@ -258,6 +297,14 @@ main.quiz-page > button {
     padding: 1rem 2rem;
     width: calc(100% - 4rem);
   }
+
+  .card-row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 3rem;
+  }
+
 }
 
 @media (max-width: 600px) {
