--- a/src/index.css
+++ b/src/index.css
@@ -259,6 +259,27 @@ main.quiz-page > button {
   text-transform: uppercase;
 }
 
+.details-modal {
+  width: 60%;
+  padding: 4rem;
+  border-radius: 1rem;
+  max-height: calc(100vh - 10rem);
+}
+
+.details-modal > button {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  padding: 0;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: .75rem;
+}
+
+.details-modal > h1 {
+  margin-top: 0;
+}
+
 @media (orientation: portrait) {
   #root {
     flex-direction: column;
